--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="login">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-  <meta name="google-signin-client_id" content="1:966700247743:web:b71ce2b81ae61b1def740a.apps.googleusercontent.com">
+  <meta name="google-signin-client_id" content="YOUR_GOOGLE_SIGN_IN_OAUTH_CLIENT_ID.apps.googleusercontent.com">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
@@ -57,4 +57,30 @@
     });
   </script>
 </body>
+<script type="module">
+  // add
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyD9FM6IlmD1CMWBKLdg9Bq-raElK0MRkgo",
+    authDomain: "real-app-710f5.firebaseapp.com",
+    databaseURL: "https://real-app-710f5-default-rtdb.asia-southeast1.firebasedatabase.app",
+    projectId: "real-app-710f5",
+    storageBucket: "real-app-710f5.appspot.com",
+    messagingSenderId: "966700247743",
+    appId: "1:966700247743:web:dba4b262be99ca34ef740a",
+    measurementId: "G-ED69MMCZW5"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
+
 </html>
