--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="login">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-  <meta name="google-signin-client_id" content="YOUR_GOOGLE_SIGN_IN_OAUTH_CLIENT_ID.apps.googleusercontent.com">
+  <meta name="google-signin-client_id" content="1:966700247743:web:dba4b262be99ca34ef740a.apps.googleusercontent.com">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
@@ -57,6 +57,7 @@
     });
   </script>
 </body>
+
 <script type="module">
   // add
   // Import the functions you need from the SDKs you need
